# opentype_font_explorer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
executables/: CMakeLists.txt  drawfont.cpp  test_endian.cpp  test_ids.cpp  version.cpp
include/: OpenType.h  OpenTypeBitmap.h  OpenTypeFont.h  OpenTypeFontMetrics.h
include/internals/: AbstractTable.h  EnumTable.h  FixedPointMath.h  FontReader.h  InternalTypes.h  MacintoshEncodingIds.h  MacintoshLanguageIds.h  NameIds.h  OffsetTable.h  SignatureBlockFormat1.h  SignatureRecord.h  TableRecord.h  TypeReader.h  WindowsLanguageIds.h
include/internals/tables/: TableCMAP.h  TableCVT.h  TableDSIG.h  TableFPGM.h  TableGASP.h  TableGLYF.h  TableHDMX.h  TableHEAD.h  TableHHEA.h  TableHMTX.h  TableKERN.h  TableLOCA.h  TableLTSH.h  TableMAXP.h  TableNAME.h  TableOS2.h  TablePOST.h  TablePREP.h  TableVDMX.h
src/: CMakeLists.txt  OpenTypeBitmap.cpp  OpenTypeFont.cpp  config.h.in
src/internals/: AbstractTable.cpp  FontReader.cpp  MacintoshEncodingIds.cpp  MacintoshLanguageIds.cpp  NameIds.cpp  OffsetTable.cpp  SignatureBlockFormat1.cpp  SignatureRecord.cpp  TableRecord.cpp  WindowsLanguageIds.cpp
src/internals/tables/: TableCMAP.cpp  TableCVT.cpp  TableDSIG.cpp  TableFPGM.cpp  TableGASP.cpp  TableGLYF.cpp  TableHDMX.cpp  TableHEAD.cpp  TableHHEA.cpp  TableHMTX.cpp  TableKERN.cpp  TableLOCA.cpp  TableLTSH.cpp  TableMAXP.cpp  TableNAME.cpp  TableOS2.cpp  TablePOST.cpp  TablePREP.cpp  TableVDMX.cpp
tests/: CMakeLists.txt  catch_main.cpp  catch_main.h  test_catch.cpp  test_fixedpointmaths.cpp  test_fontreader.cpp  test_offsettable.cpp  test_opentypebitmap.cpp  test_tablerecord.cpp  test_typereader.cpp
